testsuite/tests/codeGen/should_fail/all.T
# Tests for code generator and CMM parser

test('T8131', cmm_src, compile_fail, [''])
